<resources>
        <string name="app_name">LUCK</string>
        <string name="actionbar_title_search">Search</string>
        <string name="data_loading">loading...</string>
        <string name="dialog_title">Tips</string>
        <string name="dialog_cancle">Cancle</string>
        <string name="dialog_ok">Ok</string>
        <string name="tips_system_error">The app be error,will exit！</string>
        <string name="tip_double_click_exit">The app will be exit if you click again!</string>
        <string name="tips_try_use_message">You use the testaccount,is go?</string>
        <string name="tips_have_no_intent">Have no internet and check it！</string>
        <string name="tips_server_error">The server is slow,waiting!</string>
        <string name="tips_login_faile">The user login faile！</string>
        <string name="tips_logout_msg">do you loginout ?</string>
        <string name="tips_parse_data_error">The data parse error！</string>
        <string name="tips_data_load_faile">loading data faile？</string>
        <string name="tips_reboot_app">Success and reboot the app。</string>
        <string name="tips_location_ing">locationing...</string>
        <string name="error_view_no_data">Have no data</string>
        <string name="error_view_load_error_click_to_refresh">loading data faile,click here to reload</string>
        <string name="clear_cache_success">The cache clear success!</string>
        <string name="clear_cache_faile">The cache clear faile!</string>
        <string name="tip_clear_cache">Could you clear the cache?</string>
        <string name="map_error_key">The BaiduMap key is error!</string>
        <string name="start_to_user">Start</string>
        <string name="main_title_persion">Persion</string>
        <string name="main_slide_monitor">Monitor</string>
        <string name="main_slide_navi">Route</string>
        <string name="main_slide_ubook">Book</string>
        <string name="main_slide_wzcq">Query</string>
        <string name="main_slide_report">Report</string>
        <string name="main_slide_adverise">FeedBook</string>
        <string name="main_slide_about">About</string>
        <string name="main_slide_settings">Settings</string>
        <string name="main_slide_loginout">LoginOut</string>
        <string name="drawer_open">Open</string>
        <string name="drawer_close">Close</string>
        <string name="main_slide_cars">CarsList</string>
        <string name="main_title_trackplay">Trackplay</string>
        <string name="main_title_tracking">Trackplaying</string>
        <string name="main_title_cardetail">CarsDetail</string>
        <string name="main_slide_notice">AlarmInfo</string>
        <string name="user_language_title">Language</string>
        <string name="user_map_title">Map</string>
        <string name="main_select_time">SelectTime</string>
        <string name="select_language">Language</string>
        <string name="try_to_user">Try</string>
        <string name="user_login_way">UserName</string>
        <string name="car_login_way">CarNumber</string>
        <string name="user_login_name">Account</string>
        <string name="user_login_passwd">Password</string>
        <string name="user_edit_name_hit">input the account/number</string>
        <string name="user_edit_passwd_hit">input the password</string>
        <string name="user_auto_login">AutoLogin</string>
        <string name="user_remember_login">Rember</string>
        <string name="user_btn_login">Login</string>
        <string name="user_change_server">change server>></string>
        <string name="app_version">Version:%s</string>
        <string name="login_msg_ip_null">The host is empty!</string>
        <string name="login_msg_ip_error">The host is error!</string>
        <string name="login_msg_port_null">The port is empty!</string>
        <string name="login_msg_port_error">The port is error!</string>
        <string name="google_map_error">The app checked the android system have no google framework,so you do not use to google map!</string>
        <string name="user_input_host_title">Host and Port</string>
        <string name="user_host_hit">input the host</string>
        <string name="user_port_hit">input port</string>
        <string name="clear_cache">Cache</string>
        <string name="app_scope_title">Scope</string>
        <string name="monitor_reflush_time">MonitorReflush</string>
        <string name="zhuizong_reflush_time">TrackReflush</string>
        <string name="set_car_update">Update</string>
        <string name="map_baidu">BaiduMap</string>
        <string name="map_google">GoogleMap</string>
        <string name="lan_chinese">Chinese</string>
        <string name="lan_english">English</string>
        <string name="set_monitor_time">Monitor ReflushTime</string>
        <string name="set_zhuizong_time">Track ReflushTime</string>
        <string-array name="select_times">

            <item>15</item>
            <item>20</item>
            <item>25</item>
            <item>30</item>
            <item>35</item>
            <item>40</item>

        </string-array>
        <string name="uc_loginStyle">LoginStyle:</string>
        <string name="uc_logintime">LoginTime:</string>
        <string name="uc_loginname">Account:</string>
        <string name="down_state">downloading：%s</string>
        <string name="update_error_last">The app version is lastest!</string>
        <string name="update_error_network">loading data faile!</string>
        <string name="car_out_data">Outtime:</string>
        <string name="cars_all_title">All%s</string>
        <string name="cars_online_title">Online%s</string>
        <string name="cars_outline_title">Outline%s</string>
        <string name="car_search_title">Search</string>
        <string name="search_content_hit">input the number</string>
        <string name="car_service_out">The car is outtime!</string>
        <string name="str_feedback_submit">Commit</string>
        <string name="str_feedback_et_hint">We are imporve it</string>
        <string name="str_feedback_contact">Phone(Email)：（Options）</string>
        <string name="str_feedback_contact_hint">Review you in time</string>
        <string name="str_feedback_succeed">Thank you for your addverise ,We will dealwith in time!</string>
        <string name="str_feedback_tip">We will dealwith it in time !</string>
        <string name="str_feedback_program">Error</string>
        <string name="str_feedback_adverise">Addverise</string>
        <string name="notice_detial_title">AlarmDetail</string>
        <string name="pop_alarm_title">number:%1$s  [%2$s]</string>
        <string name="pop_alarm_time">time:%1$s</string>
        <string name="pop_alarm_desc">speed:%1$skm  ACC:%2$s</string>
        <string name="pop_alarm_type">type:%1$s</string>
        <string name="pop_alarm_location">address:%1$s</string>
        <string name="tips_alarm_type_error">the type is error</string>
        <string name="marker_btn_guiji">Track</string>
        <string name="marker_btn_daohang">Route</string>
        <string name="marker_btn_zhiling">Cmd</string>
        <string name="marker_btn_weilan">Elec</string>
        <string name="marker_btn_xunche">Tracking</string>
        <string name="marker_btn_xiangqing">Detail</string>
        <string name="car_map_poi_number">number:%1$s</string>
        <string name="car_list_top_title">Choice</string>
        <string name="car_map_poi_time">time:%1$s</string>
        <string name="car_map_poi_state">state:%1$s</string>
        <string name="car_map_poi_desc">voltage:%1$sV speed:%2$skm  oil:%3$sL  templure:%4$s°C</string>
        <string name="car_map_poi_mile">mile:%1$s  countmile:%2$s</string>
        <string name="car_map_poi_latlng">Latlng:%1$s,%2$s</string>
        <string name="car_map_poi_location">address:%1$s</string>
        <string name="car_map_poi_other">electric:%1$sΩ</string>
        <string name="car_map_poi_stoptime">stoptime:</string>
        <string name="car_no_time">time error</string>
        <string name="car_no_state">state error</string>
        <string name="car_no_lat">Lat error</string>
        <string name="car_no_lng">Lng error</string>
        <string name="car_no_location">have no location</string>
        <string name="map_traffic_open">is open</string>
        <string name="map_traffic_close">is close</string>
        <string name="car_no_enable">car number error</string>
        <string name="car_title_search_nill">the input is empty</string>
        <string name="car_marker_error">the latlng is error！</string>
        <string name="car_detail_number">number:%1$s</string>
        <string name="start_time_title">start:%1$s</string>
        <string name="end_time_title">end:%1$s</string>
        <string name="start_toplay">play</string>
        <string name="set_start_date">start time</string>
        <string name="set_end_date">end time</string>
        <string name="start_date_null">start time is empty!</string>
        <string name="end_date_null">end time is empty!</string>
        <string name="date_select_error">the start time must be before the end time!</string>
        <string name="date_select_exceptin">the time is error!</string>
        <string name="date_select_equal">the start and end is the same.</string>
        <string name="date_select_week">the time must be in 3 days.</string>
        <string name="dialog_wheel_year">year</string>
        <string name="dialog_wheel_month">mouth</string>
        <string name="dialog_wheel_day">day</string>
        <string name="dialog_wheel_hour">hour</string>
        <string name="dialog_wheel_min">min</string>
        <string name="dialog_wheel_second">second</string>
        <string name="history_seekbar_title">number:%1$s  speed:%2$s dict:%3$s  time:%4$s</string>
        <string name="history_quickly">quick</string>
        <string name="history_slow">slow</string>
        <string name="history_loc_st">start</string>
        <string name="history_loc_en">end</string>
        <string name="search_his_no_tips">have no history</string>
        <string name="search_history_title">search history</string>
        <string name="transform_route_title">Route plan</string>
        <string name="transform_start">myLocation</string>
        <string name="transform_start_hit">select the start</string>
        <string name="transform_end_hit">select the end</string>
        <string name="top_search_hit">input the address</string>
        <string name="tips_no_navia_error">the map can not use the navia！</string>
        <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
        <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
        <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>