<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginBottom="@dimen/lay_12"
        android:layout_marginLeft="@dimen/lay_16"
        android:layout_marginRight="@dimen/lay_16"
        android:layout_marginTop="@dimen/lay_12"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb_error"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/str_feedback_program"
            android:textColor="@color/feed_back_color"
            android:textSize="@dimen/font_14" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/lay_12"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/str_feedback_adverise"
            android:textColor="@color/feed_back_color"
            android:textSize="@dimen/font_14" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_feed_back"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="@dimen/lay_12"
        android:layout_marginLeft="@dimen/lay_16"
        android:layout_marginRight="@dimen/lay_16"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/str_feedback_et_hint"
        android:padding="@dimen/lay_8"
        android:textSize="@dimen/font_14" />



    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lay_12"
        android:layout_marginLeft="@dimen/lay_16"
        android:layout_marginRight="@dimen/lay_16"
        android:background="@drawable/selector_shake_get"
        android:text="@string/str_feedback_submit"
        android:textColor="@color/white" />
</LinearLayout>