<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/day_layout_bg_normal"
    android:orientation="vertical" >

    <TextView
        style="@style/myStyle.BlackTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:text="@string/user_input_host_title"
        android:textSize="@dimen/space_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/dialog_host_bg_selector"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/server_host"
            style="@style/myStyle.GrayTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginTop="@dimen/space_10"
            android:hint="@string/user_host_hit"
            android:paddingLeft="@dimen/space_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/lines_rect_color"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/server_port"
            style="@style/myStyle.GrayTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_5"
            android:hint="@string/user_port_hit"
            android:paddingLeft="@dimen/space_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginTop="@dimen/space_10"
        android:background="@null"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_cancle"
            style="@style/myStyle.BlackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_45"
            android:layout_weight="1.0"
            android:text="@string/dialog_cancle" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_10"
            android:background="@color/lines_rect_color" />

        <TextView
            android:id="@+id/dialog_ok"
            style="@style/myStyle.BlackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_45"
            android:layout_weight="1.0"
            android:text="@string/dialog_ok" />
    </LinearLayout>

</LinearLayout>