<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/layout_item_bg"
        android:clickable="true"
        android:padding="@dimen/space_16" >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/uc_loginname"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <View
        style="@style/h_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/layout_item_bg"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/space_16" >

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/uc_loginStyle"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_loginstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <View
        style="@style/h_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?layout_item_bg"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/space_16" >

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/uc_logintime"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_join_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <!--<View-->
        <!--style="@style/h_line" />-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?attr/layout_item_bg"-->
        <!--android:clickable="true"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="@dimen/space_16" >-->

        <!--<TextView-->
            <!--android:id="@id/text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="@dimen/space_4"-->
            <!--android:text="@string/academic_focus"-->
            <!--android:textColor="?attr/infoTextColor"-->
            <!--android:textSize="@dimen/text_size_16" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_academic_focus"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/text"-->
            <!--android:textColor="?attr/textColor"-->
            <!--android:textSize="@dimen/text_size_16" />-->
    <!--</RelativeLayout>-->

    <View
        style="@style/h_line" />

</LinearLayout>